2/8 17:43 spring security 진행중

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,9 @@ spring.datasource.url=jdbc:mariadb://localhost:3307/NEWFINDER
 spring.datasource.username=NEWFINDER
 spring.datasource.password=finder1234
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=true
 
 spring.thymeleaf.cache=false
-
-spring.servlet.multipart.enabled=true
-spring.servlet.multipart.location=D:\\spring
-spring.servlet.multipart.max-request-size=30MB
-spring.servlet.multipart.max-file-size=10MB
